test/pending/neg/plugin-after-terminal/testsource.scala
object Test extends Application {
  println("afterterminal")
}

